--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fastify/helmet": "^10.0.2",
     "@fastify/multipart": "^7.3.0",
     "@fastify/sensible": "^5.1.1",
+    "@fastify/static": "^6.5.0",
     "@fastify/swagger": "^8.1.0",
     "@fastify/swagger-ui": "^1.1.0",
     "@sinclair/typebox": "^0.25.2",
@@ -49,7 +50,7 @@
     "fastify-plugin": "^4.3.0",
     "fastify-tsconfig": "^1.0.1",
     "graphql": "^16.6.0",
-    "mercurius": "^11.2.0",
+    "mercurius": "^11.3.0",
     "mercurius-codegen": "^4.0.1",
     "mercurius-integration-testing": "^6.0.1",
     "nexus": "^1.3.0",
