--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
         # Those are not supported by biomejs yet, refer https://biomejs.dev/internals/language-support/
         types_or: [html, css, markdown]
   - repo: https://github.com/biomejs/pre-commit
-    rev: "v0.1.0" # Use the sha / tag you want to point at
+    rev: "v2.0.0-beta.1" # Use the sha / tag you want to point at
     hooks:
       - id: biome-check
-        additional_dependencies: ["@biomejs/biome@1.6.3"]
+        additional_dependencies: ["@biomejs/biome@2.0.0-beta.1"]
